[package]
name = "pcd-format"
version = "0.2.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcd-rs = { version = "0.11.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
