[package]
name = "pcd-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
console = "0.15.0"
dialoguer = "0.10.2"
iterator-ext = "0.2.0"
pcd-format = { version = "0.1.0", path = "../pcd-format" }
pcd-rs = "0.10.0"
chrono = "0.4.19"
pcap = "0.9.1"
num-traits = "0.2.14"
clap = { version = "4.1.11", features = ["derive"] }
velodyne-lidar = { version = "0.1.0", features = ["pcap"] }
kiss3d = "0.35.0"
itertools = "0.10.5"
