[package]
name = "pcd-tool"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
console = "0.15.8"
dialoguer = "0.11.0"
iterator-ext = "0.2.1"
pcd-format = { version = "0.1.0", path = "../pcd-format" }
pcd-rs = "0.10.0"
chrono = "0.4.35"
pcap = "1.3.0"
num-traits = "0.2.18"
clap = { version = "4.5.3", features = ["derive"] }
velodyne-lidar = { version = "0.2.0", features = ["pcap"] }
kiss3d = "0.35.0"
itertools = "0.12.1"
approx = "0.5.1"
measurements = "0.11.0"
ratatui = "0.23.0"
crossterm = "0.27.0"
byteorder = "1.5.0"
rayon = "1.9.0"
